# PigeNowel

./: CMakeLists.txt  cmakeWin32-VS2013.bat  cmakeWin32-VS2015.bat  names.csv  names_test.txt
PigeNowel/: CMakeLists.txt  SendEmail.h  main.cpp
Python/: participants.csv  pigenowel.py
